Bug 152218 - FILESAVE PDF PAC tool reports "Link annotation is not nested inside a Link structure element" error with footnote
Summary: FILESAVE PDF PAC tool reports "Link annotation is not nested inside a Link st...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.6.7.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2022-11-25 14:54 UTC by Gabor Kelemen (Collabora)
Modified: 2025-06-12 10:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with footnote and endnote (17.28 KB, application/vnd.oasis.opendocument.text)
2022-11-25 14:56 UTC, Gabor Kelemen (Collabora)
Details
The example file exported to PDF (53.63 KB, application/pdf)
2022-11-25 14:56 UTC, Gabor Kelemen (Collabora)
Details
The error reported by PAC tool (255.37 KB, image/png)
2022-11-25 14:57 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-11-25 14:54:31 UTC
When the attached file with footnotes is exported to PDF with PDF/UA enabled and the file is checked in the PAC tool, the reported error is "Link annotation is not nested inside a Link structure element"

1, Open attached file
2, Export it as PDF, with enabled PDF/UA option
3, Check with the PAC tool: https://pdfua.foundation/en/pdf-accessibility-checker-pac

PAC would report the error on the attached screenshot.

VeraPDF https://demo.verapdf.org/ with PDF/UA setting on the second page, reports:

Validation information
Rule	Status
Specification: ISO 14289-1:2014, Clause: 7.9, Test number: 1	
Note tag shall have ID entry	Failed
3 occurrences 	Hide
SENote	
noteID != null && noteID != ''	
root/document[0]/StructTreeRoot[0](47 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[3](11 0 obj SEDiv Div)/K[0](12 0 obj SENote Note)
root/document[0]/StructTreeRoot[0](47 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[3](11 0 obj SEDiv Div)/K[1](14 0 obj SENote Note)
root/document[0]/StructTreeRoot[0](47 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[4](19 0 obj SEDiv Div)/K[0](20 0 obj SENote Note)

	
Specification: ISO 14289-1:2014, Clause: 7.18.5, Test number: 1	
Links shall be tagged according to ISO 32000-1:2008, 14.8.4.4.2, Link Element.	Failed
3 occurrences 	Hide
PDLinkAnnot	
structParentType == 'Link' || isOutsideCropBox == true || (F & 2) == 2	
root/document[0]/pages[0](1 0 obj PDPage)/annots[0](22 0 obj PDLinkAnnot)
root/document[0]/pages[0](1 0 obj PDPage)/annots[2](24 0 obj PDLinkAnnot)
root/document[0]/pages[1](16 0 obj PDPage)/annots[0](26 0 obj PDLinkAnnot)


Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5116d6ad85d804e7b7897bc57a4a4bf9d5bed4f1
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2022-11-25 14:56:06 UTC
Created attachment 183776 [details]
Example file with footnote and endnote
Comment 2 Gabor Kelemen (Collabora) 2022-11-25 14:56:31 UTC
Created attachment 183777 [details]
The example file exported to PDF
Comment 3 Gabor Kelemen (Collabora) 2022-11-25 14:57:13 UTC
Created attachment 183778 [details]
The error reported by PAC tool
Comment 4 Stéphane Guillou (stragu) 2022-12-05 15:07:30 UTC
Reproduced with VeraPDF check and:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Also in:

Version: 7.0.6.2
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

VeraPDF lists both clauses 7.9 and 7.18.5.
Comment 5 Commit Notification 2023-03-13 10:31:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c105fbec07d0734b6b183ea8b4da15e8fe260f9b

tdf#152218 sw: PDF/UA export: produce Link from footnote to body

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-13 10:31:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4250f334de729360567ec9bd88aed06fbd823dc4

tdf#152218 vcl: PDF/UA export: produce ID for footnote/endnote

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2023-03-13 13:35:31 UTC
fixed on master
Comment 8 Commit Notification 2023-03-13 16:32:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/bed8aa41525a4194497f5a2e05633b4d41d8ab07

tdf#152218 sw: PDF/UA export: produce Link from footnote to body

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-03-16 11:45:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c5eea0a2ed090dbc243e8330d8d99ca94bacf691

tdf#152218 vcl: PDF/UA export: produce ID for footnote/endnote

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gabor Kelemen (Collabora) 2023-04-12 23:27:14 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc6806c4be8585ce0d35a6b581bf8b3dbf858500
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

The exported example file now passes the PAC and VeraPDF checks.
Comment 11 Domenico Tironi 2024-05-15 08:46:05 UTC
The Bug seems to be fixed for footnotes. For page headers, it still exists. I will open a new ticket.